--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <h1>Star Wars</h1>
+    <h2>
+      <a href="<%= alliances_path %>">Alliances</a> |
+      <a href="<%= characters_path %>">Characters</a> 
+    </h2>
     <%= yield %>
   </body>
 </html>
