fix submit button reload issue

--- a/app/views/alliances/edit.html.erb
+++ b/app/views/alliances/edit.html.erb
@@ -1,6 +1,8 @@
 <div class="edit-form">
-  <h2>Create a new Alliance</h2>
+  <h2>Edit this Alliance</h2>
+</div>
   <%= form_for (@alliance) do |f| %>
+  <div class="edit-form">
     <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
