started on planets crud

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -3,7 +3,7 @@
 <p>species: <%= @character.species %></p>
 <p>class: <%= @character.classification %></p>
 <p>birth_year: <%= @character.birth_year %></p>
-<p>homeworld: <%= @character.homeworld %></p>
+<p>homeworld: <%= @character.homeworld.name %></p>
 <p>vehicles: <%= @character.vehicles %></p>
 <p>height: <%= @character.height %></p>
 <p>mass: <%= @character.mass %></p>
