--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <h1>Star Wars</h1>
     <h2>
       <a href="<%= alliances_path %>">Alliances</a> |
-      <a href="<%= characters_path %>">Characters</a> 
+      <a href="<%= characters_path %>">Characters</a> |
+      <a href="<%= planets_path %>">Planets</a>
     </h2>
     <%= yield %>
   </body>
