--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <h2>
       <a href="<%= alliances_path %>">Alliances</a> |
       <a href="<%= characters_path %>">Characters</a> |
-      <a href="<%= planets_path %>">Planets</a>
+      <a href="<%= homeworlds_path %>">Planets</a>
     </h2>
     <%= yield %>
   </body>
