--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="edit-form">
-  <h2>Create a new Character</h2>
+  <h2>Edit this Character</h2>
 </div>
   <%= form_for ([@character.alliance, @character]) do |f| %>
   <div class="edit-form">
@@ -10,6 +10,11 @@
   <div class="edit-form">
     <%= f.label :img_url %>
     <%= f.text_field :img_url %>
+  </div>
+
+  <div class="edit-form">
+    <%= f.label :bio %>
+    <%= f.text_field :bio %>
   </div>
 
   <div class="edit-form">
@@ -28,11 +33,6 @@
   </div>
 
   <div class="edit-form">
-    <%= f.label :homeworld %>
-    <%= f.text_field :homeworld %>
-  </div>
-
-  <div class="edit-form">
     <%= f.label :vehicles %>
     <%= f.text_field :vehicles %>
   </div>
@@ -45,6 +45,11 @@
   <div class="edit-form">
     <%= f.label :mass %>
     <%= f.text_field :mass %>
+  </div>
+
+  <div class="edit-form">
+    <%= f.label :home_planet %>
+    <%= select(:character, :homeworld_id, Homeworld.all.collect{|homeworld| [homeworld.name, homeworld.id]})%>
   </div>
 
   <div class="edit-form">
