--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,17 @@
   </head>
 
   <body>
-    <h1 class="main-heading">Star Wars</h1>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <h2 class="sub-headings">
-      <a class="sub-heading" href="<%= alliances_path %>">Alliances</a>
-      <a class="sub-heading" href="<%= characters_path %>">Characters</a> 
-      <a class="sub-heading" href="<%= homeworlds_path %>">Planets</a>
-    </h2>
-    <hr>
+    <header class="top">
+      <h1 class="main-heading">Star Wars</h1>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <h2 class="sub-headings">
+        <a class="sub-heading" href="<%= alliances_path %>">Alliances</a>
+        <a class="sub-heading" href="<%= characters_path %>">Characters</a>
+        <a class="sub-heading" href="<%= homeworlds_path %>">Planets</a>
+      </h2>
+      <hr>
+    </header>
     <%= yield %>
   </body>
 </html>
