--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,15 +1,24 @@
 <h2><%= @character.name %></h2>
+
+
+<% if @character.img_url != nil %>
+  <img src="<%= @character.img_url %>" alt="<%= @character.name %>" width="300px">
+<% end %>
+
 <p>Alliance: <a href="<%= alliance_path(@character.alliance) %>"><%= @character.alliance.name %></a></p>
+
 <% if @character.bio != "" %>
   <p>bio: <%= @character.bio %></p>
 <% else %>
   <p>bio: little is known about <%= @character.name %></p>
 <% end %>
+
 <% if @character.classification != "" %>
   <p>class: <%= @character.classification %></p>
   <% else %>
     <p>class: unknown</p>
 <% end %>
+
 <p>species: <%= @character.species %></p>
 <p>birth_year: <%= @character.birth_year %></p>
 <p>homeworld: <a href="<%= homeworld_path(@character.homeworld) %>"><%= @character.homeworld.name %></a></p>
