--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
         <a class="sub-heading" href="<%= alliances_path %>">Alliances</a>
         <a class="sub-heading" href="<%= characters_path %>">Characters</a>
         <a class="sub-heading" href="<%= homeworlds_path %>">Planets</a>
+        <a class="sub-heading" href="<%= species_index_path %>">Species</a>
       </h2>
       <hr>
     </header>
