--- a/app/views/species/show.html.erb
+++ b/app/views/species/show.html.erb
@@ -1,4 +1,30 @@
-<p id="notice"><%= notice %></p>
+<%= link_to 'Edit', edit_species_path %>
 
-<%= link_to 'Edit', edit_species_path(@species) %> |
-<%= link_to 'Back', species_path %>
+<h2><%= @species.name %></h2>
+<% if @species.img_url != nil %>
+  <img src="<%= @species.img_url %>" alt="<% @species.name %>" width="300px">
+<% end %>
+
+<p>Designation: <%= @species.designation %></p>
+
+<p>Classification: <%= @species.classification %></p>
+
+<% if @species.average_height != nil && @species.average_height != 0 %>
+<p>Average Height:
+  <%= ((@species.average_height*0.39).round / 12).floor %> Ft,
+  <%= (@species.average_height*0.39).round % 12 %> In
+</p>
+<% else %>
+  <p>height: unknown</p>
+<% end %>
+
+<p>average_lifespan: <%= @species.average_lifespan %> earth years</p>
+<p>skin_colors: <%= @species.skin_colors %></p>
+<p>Films: <%= @species.films %></p>
+<p>Homeworld: <a href="<%= homeworld_path(@species.homeworld) %>"><%= @species.homeworld.name %></a></p>
+<p>Notable <%= @species.name %> Creatures</p>
+<% @species.characters.each do |character| %>
+  <ul>
+    <li><a href="<%= character_path(character) %>"><%= character.name %></a></li>
+  </ul>
+<% end %>
