--- a/app/views/species/index.html.erb
+++ b/app/views/species/index.html.erb
@@ -1,25 +1,5 @@
-<p id="notice"><%= notice %></p>
+<%= link_to "Create a new species", new_species_path %>
 
-<h1>Species</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @species.each do |species| %>
-      <tr>
-        <td><%= link_to 'Show', species %></td>
-        <td><%= link_to 'Edit', edit_species_path(species) %></td>
-        <td><%= link_to 'Destroy', species, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Species', new_species_path %>
+<% @species.each do |critter| %>
+  <h3><a href="<%= species_path(critter) %>"><%= critter.name %></a></h3>
+<% end %>
