--- a/app/views/homeworlds/edit.html.erb
+++ b/app/views/homeworlds/edit.html.erb
@@ -42,4 +42,4 @@
   </div>
 <% end %>
 
-<%= link_to "Destroy this Planet", homeworld_path(@planet), method: :delete, class: "delete homeworld-link", :data => {:confirm => 'This will destroy the entire planet and everyone on it.  Are you sure??????'} %>
+<%= link_to "Destroy this Planet and commit mass genocide?", homeworld_path(@planet), method: :delete, class: "delete homeworld-link", :data => {:confirm => 'This will destroy the entire planet and everyone on it.  Are you sure??????'} %>
