--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <a class="sub-heading" href="<%= characters_path %>">Characters</a>
         <a class="sub-heading" href="<%= homeworlds_path %>">Planets</a>
         <a class="sub-heading" href="<%= species_index_path %>">Species</a>
+        <a class="sub-heading" href="<%= vehicles_path %>">Transports</a>
       </h2>
       <hr>
     </header>
