--- a/app/views/species/edit.html.erb
+++ b/app/views/species/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="edit-form">
-  <h2>Create a new Species</h2>
+  <h2>Edit this Species</h2>
 </div>
   <%= form_for @species do |f| %>
   <div class="edit-form">
