--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -18,11 +18,6 @@
   </div>
 
   <div class="edit-form">
-    <%= f.label :species %>
-    <%= f.text_field :species %>
-  </div>
-
-  <div class="edit-form">
     <%= f.label :class %>
     <%= f.text_field :classification %>
   </div>
@@ -33,11 +28,6 @@
   </div>
 
   <div class="edit-form">
-    <%= f.label :vehicles %>
-    <%= f.text_field :vehicles %>
-  </div>
-
-  <div class="edit-form">
     <%= f.label :height %>
     <%= f.text_field :height %>
   </div>
@@ -45,6 +35,16 @@
   <div class="edit-form">
     <%= f.label :mass %>
     <%= f.text_field :mass %>
+  </div>
+
+  <div class="edit-form">
+    <%= f.label :vehicles %>
+    <%= f.select :vehicles, Vehicle.all.collect{|vehicle| [vehicle.name, vehicle.id]}, { :prompt => "Please select"}, {:multiple => true} %>
+  </div>
+
+  <div class="edit-form">
+    <%= f.label :species %>
+    <%= select(:character, :species_id, Species.all.collect{|species| [species.name, species.id]}) %>
   </div>
 
   <div class="edit-form">
