--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -36,15 +36,16 @@
     <%= f.label :mass %>
     <%= f.text_field :mass %>
   </div>
+
   <% cruisers = [] %>
   <% @character.vehicles.each do |i| %>
-    <% cruisers << i.name %>
+    <% cruisers << i.id %>
   <% end %>
 
   <div class="edit-form">
     <%= f.label :vehicles %>
-    <%= f.select :vehicles, Vehicle.all.collect{|vehicle| [vehicle.name, vehicle.id, {cruisers.include?(vehicle.name) :selected => "selected" }]},
-      {},
+    <%= f.select :vehicles, Vehicle.all.collect{|vehicle| [vehicle.name, vehicle.id]},
+      {:selected => cruisers},
     {:multiple => true} %>
   </div>
 
