--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,5 +1,17 @@
 <%= link_to "Create a new character", new_character_path %>
 
-<% @characters.each do |character| %>
-  <h3><a href="<%= character_path(character) %>"><%= character.name %></a></h3>
-<% end %>
+<% @characters = @characters.sort_by { |k| k[:name] }%>
+
+<div class="index-all">
+  <% @characters.each do |character| %>
+    <div class="index-box">
+      <a href="<%= character_path(character) %>">
+        <h3><%= character.name %></h3>
+        <img src="<%= character.img_url %>" alt="<%= character.name %>" class="index-img">
+        <% if character.catch_phrase != "" %>
+          <p class="catch-phrase">"<%= character.catch_phrase %>"</p>
+        <% end %>
+      </a>
+    </div>
+  <% end %>
+</div>
