--- a/app/views/homeworlds/index.html.erb
+++ b/app/views/homeworlds/index.html.erb
@@ -1,4 +1,14 @@
 <%= link_to "Create a new planet", new_homeworld_path %>
-<% @planets.each do |planet| %>
-  <h3><a href="<%= homeworld_path(planet) %>"><%= planet.name %></a></h3>
-<% end %>
+
+<% @planets = @planets.sort_by { |k| k[:name] }%>
+
+<div class="index-all">
+  <% @planets.each do |planet| %>
+    <div class="index-box">
+      <a href="<%= homeworld_path(planet) %>">
+        <h3><%= planet.name %></h3>
+        <img src="<%= planet.img_url %>" alt="<%= planet.name %>" class="index-img">
+      </a>
+    </div>
+  <% end %>
+</div>
