--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
 
   <body>
@@ -13,13 +14,13 @@
       <h1 class="main-heading">Star Wars</h1>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
-      <h2 class="sub-headings">
-        <a class="sub-heading" href="<%= alliances_path %>">Alliances</a>
-        <a class="sub-heading" href="<%= characters_path %>">Characters</a>
-        <a class="sub-heading" href="<%= homeworlds_path %>">Planets</a>
-        <a class="sub-heading" href="<%= species_index_path %>">Species</a>
-        <a class="sub-heading" href="<%= vehicles_path %>">Transports</a>
-      </h2>
+      <div class="sub-headings">
+        <h2 class="sub-heading"><a href="<%= alliances_path %>">Alliances</a></h2>
+        <h2 class="sub-heading"><a href="<%= characters_path %>">Characters</a></h2>
+        <h2 class="sub-heading"><a href="<%= homeworlds_path %>">Planets</a></h2>
+        <h2 class="sub-heading"><a href="<%= species_index_path %>">Species</a></h2>
+        <h2 class="sub-heading"><a href="<%= vehicles_path %>">Transports</a></h2>
+      </div>
       <hr>
     </header>
     <%= yield %>
